<resources>
    <string name="app_name">EMUNOGU</string>
    <string name="title_activity_list_song">ListSong</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="kuis">Kuis</string>
    <string name="back">Back</string>
    <string name="test_aja">Lorem ipsum dolor sit amet, ullum expetenda ea nam, zril iuvaret ea vis, cu vocent evertitur quo. At lorem mundi dolore cum. Sea civibus officiis lobortis cu, pro erat viris scripta ea. Justo eruditi duo an, mel eu inermis sadipscing. Et his elitr soleat oportere, nobis munere pri ea. Qui nisl sumo an, per et vidit option consectetuer. Quaestio sententiae theophrastus has te.

Est sale dicat oblique cu. Mentitum deterruisset signiferumque ut cum. Quot accusam dolores qui ut. Euismod imperdiet adolescens an eum, sit at amet graeci. Justo ancillae recteque ad sit.</string>

    <string name="materibab1">Lorem ipsum dolor sit amet, ullum expetenda ea nam, zril iuvaret ea vis, cu vocent evertitur quo. At lorem mundi dolore cum. Sea civibus officiis lobortis cu, pro erat viris scripta ea. Justo eruditi duo an, mel eu inermis sadipscing. Et his elitr soleat oportere, nobis munere pri ea. Qui nisl sumo an, per et vidit option consectetuer. Quaestio sententiae theophrastus has te.

Est sale dicat oblique cu. Mentitum deterruisset signiferumque ut cum. Quot accusam dolores qui ut. Euismod imperdiet adolescens an eum, sit at amet graeci. Justo ancillae recteque ad sit.</string>


    <string name="bab5">Bab5</string>
    <string name="bab4">Bab4</string>
    <string name="bab3">Bab3</string>
    <string name="bab2">Bab2</string>
    <string name="bab1">Bab1</string>
    <string name="next">Next</string>
    <string name="pilihan_d">Pilihan D</string>
    <string name="pilihan_c">Pilihan C</string>
    <string name="pilihan_b">Pilihan B</string>
    <string name="pilihan_a">Pilihan A</string>
    <string name="music_lesson">Music Lesson</string>
    <string name="write_song">Write Song</string>
    <string name="bab_selanjutnya">Bab Selanjutnya</string>
    <string name="_10">10</string>
    <string name="hasil_jawaban">Hasil Jawaban</string>
    <string name="pertanyaan_kuis">Pertanyaan Kuis</string>

    <string name="discard_yes">Discard</string>
    <string name="discard_no">Cancel</string>
</resources>
